Login Page Updated

--- a/app/src/main/res/layout/hire_user_profile_activity.xml
+++ b/app/src/main/res/layout/hire_user_profile_activity.xml
@@ -10,7 +10,7 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="10dp"
         android:text="Profile Details"
         android:textColor="@color/purple_700"
         android:textSize="18sp"
@@ -22,15 +22,18 @@
 
     <ImageView
         android:id="@+id/profilePic"
-        android:layout_width="121dp"
-        android:layout_height="127dp"
-        android:layout_marginTop="112dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
-
+        android:src="@drawable/user_profile" />
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="80dp"
+        android:id="@+id/listView"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -42,7 +45,7 @@
 
         <TextView
             android:id="@+id/nameLabel"
-            android:layout_width="150dp"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:gravity="right"
             android:text="Name -"
@@ -79,7 +82,7 @@
 
         <TextView
             android:id="@+id/mailLabel"
-            android:layout_width="150dp"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:gravity="right"
             android:text="Email id -"
@@ -116,7 +119,7 @@
 
         <TextView
             android:id="@+id/mobileLabel"
-            android:layout_width="150dp"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:gravity="right"
             android:text="Mobile -"
@@ -152,7 +155,7 @@
 
         <TextView
             android:id="@+id/DesignationLabel"
-            android:layout_width="150dp"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:gravity="right"
             android:text="Designation -"
@@ -189,10 +192,10 @@
 
         <TextView
             android:id="@+id/ComNameLabel"
-            android:layout_width="150dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="right"
-            android:text="Company Name -"
+            android:text="Company Name-"
             android:textColor="@color/purple_500"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -226,10 +229,10 @@
 
         <TextView
             android:id="@+id/ComLinkLabel"
-            android:layout_width="150dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="right"
-            android:text="Company Link -"
+            android:text="Company Link-"
             android:textColor="@color/purple_500"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
