--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -141,7 +141,7 @@
             app:layout_constraintTop_toBottomOf="@id/user_selection" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/Loginbutton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Login"
